Pre-install CV dependencies for Docker image with Apt

--- a/digito-api/Dockerfile
+++ b/digito-api/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.8
 
+RUN apt update && apt install -y python3-opencv && rm -rf /var/lib/apt/lists/*
+
 RUN pip install --upgrade pip
 RUN pip install pipenv
 COPY Pipfile ./
