--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           path: digito-ui
-          repository: ${{ env.DOCKER_IMAGE }}
+          repository: ${{ env.DOCKER_IMAGE_UI }}
           tags: ${{ github.sha }}
           tag_with_ref: true
           tag_with_sha: false
@@ -80,7 +80,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           path: digito-api
-          repository: ${{ env.DOCKER_IMAGE }}
+          repository: ${{ env.DOCKER_IMAGE_API }}
           tags: ${{ github.sha }}
           tag_with_ref: true
           tag_with_sha: false
