--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,8 +2,24 @@ apiVersion: v1
 entries:
   jtalk-digito:
   - apiVersion: v2
+    appVersion: df50af2d12e393c172786218e964269b1952211e
+    created: "2021-09-04T11:06:30.220771103Z"
+    description: A Helm chart for Digito Recogniser
+    digest: 1795b80f9737439ec200790d57b53e44fe4a14068b0b9f9152779bfcf622221b
+    home: https://digito.jtalk.me
+    maintainers:
+    - email: me+digito-helm@jtalk.me
+      name: Roman Nazarenko
+    name: jtalk-digito
+    sources:
+    - https://github.com/Jtalk/digito
+    type: application
+    urls:
+    - https://Jtalk.github.io/digito/helm/jtalk-digito-1.0.0-df50af2d12e393c172786218e964269b1952211e.tgz
+    version: 1.0.0-df50af2d12e393c172786218e964269b1952211e
+  - apiVersion: v2
     appVersion: dbc8e05ccc50e851d08d1ce9cee50ca03e9bdf19
-    created: "2021-08-31T15:36:36.622514571Z"
+    created: "2021-09-04T11:06:30.219738586Z"
     description: A Helm chart for Digito Recogniser
     digest: d07f947ee9b733787ace8e8f58853aae85089e1df0430adb0dde03b0ef5966e1
     home: https://digito.jtalk.me
@@ -19,7 +35,7 @@ entries:
     version: 1.0.0-dbc8e05ccc50e851d08d1ce9cee50ca03e9bdf19
   - apiVersion: v2
     appVersion: 400cf86c856ac185e8579881d7e9cec33e09a24b
-    created: "2021-08-31T15:36:36.621215638Z"
+    created: "2021-09-04T11:06:30.218614966Z"
     description: A Helm chart for Digito Recogniser
     digest: e5018d4d61122ef1c08765286996b908aaa9e5907e1acfa9a7be2017907ff94a
     home: https://digito.jtalk.me
@@ -35,7 +51,7 @@ entries:
     version: 1.0.0-400cf86c856ac185e8579881d7e9cec33e09a24b
   - apiVersion: v2
     appVersion: 21ebc80cb5094d3b093d1bb8c5ac1c6703fc1e10
-    created: "2021-08-31T15:36:36.619901204Z"
+    created: "2021-09-04T11:06:30.217422146Z"
     description: A Helm chart for Digito Recogniser
     digest: 3020d77f7edcceabcc32706ec8fd01fb1179da39dd722f7bbe629529ab6a6417
     home: https://digito.jtalk.me
@@ -49,4 +65,4 @@ entries:
     urls:
     - https://Jtalk.github.io/digito/helm/jtalk-digito-1.0.0-21ebc80cb5094d3b093d1bb8c5ac1c6703fc1e10.tgz
     version: 1.0.0-21ebc80cb5094d3b093d1bb8c5ac1c6703fc1e10
-generated: "2021-08-31T15:36:36.618454267Z"
+generated: "2021-09-04T11:06:30.2147272Z"
