--- a/digito-ui/package.json
+++ b/digito-ui/package.json
@@ -5,28 +5,28 @@
   "dependencies": {
     "b64-to-blob": "^1.2.19",
     "catenary-curve": "^1.0.1",
-    "handlebars": "^4.7.3",
+    "handlebars": "^4.7.7",
     "lazy-brush": "^1.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-error-boundary": "^1.2.5",
-    "react-global-configuration": "^1.4.0",
-    "react-scripts": "^3.4.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
+    "react-global-configuration": "^1.4.1",
+    "react-scripts": "^4.0.3",
     "resize-observer-polyfill": "^1.5.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
-    "serve": "^11.3.0",
-    "sleepjs": "^3.0.1",
-    "superagent": "^5.2.2",
+    "semantic-ui-react": "^2.0.3",
+    "serve": "^12.0.0",
+    "sleepjs": "^4.0.3",
+    "superagent": "^6.1.0",
     "superagent-prefix": "^0.0.2",
     "superagent-suffix": "^0.1.0",
-    "typechecker": "^6.3.0"
+    "typechecker": "^7.18.0"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "jest-canvas-mock": "^2.2.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "jest-canvas-mock": "^2.3.1",
     "superagent-mocker": "^0.5.2"
   },
   "scripts": {
