Fix k8s cors for localhost

--- a/deploy/jtalk-digito/templates/api/configmap.yaml
+++ b/deploy/jtalk-digito/templates/api/configmap.yaml
@@ -8,7 +8,7 @@ data:
     {{- $noop := printf "https://%s" $domain | append $origins.value | set $origins "value" -}}
   {{- end }}
   {{- if .Values.api.cors.localhostPort }}
-    {{- $noop := printf "https://localhost:%.0f" .Values.api.cors.localhostPort | append $origins.value | set $origins "value" -}}
+    {{- $noop := printf "http://localhost:%.0f" .Values.api.cors.localhostPort | append $origins.value | set $origins "value" -}}
   {{- end }}
   LOGGER_LEVEL: INFO
   UI_LOCATION: {{ join "," $origins.value | quote }}
