--- a/digito-api/Pipfile
+++ b/digito-api/Pipfile
@@ -33,6 +33,7 @@ mock = ">=3.0.5,<4"
 nose2 = ">=0.9.2,<1"
 requests = ">=2.23.0,<3"
 waiting = ">=1.4.1,<2"
+watchdog = ">=2.1.5,<3"
 
 [requires]
 python_version = "3.8"
