--- a/digito-ui/package.json
+++ b/digito-ui/package.json
@@ -30,6 +30,7 @@
     "superagent-mocker": "^0.5.2"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
