--- a/digito-api/Pipfile
+++ b/digito-api/Pipfile
@@ -34,6 +34,7 @@ nose2 = ">=0.9.2,<1"
 requests = ">=2.23.0,<3"
 waiting = ">=1.4.1,<2"
 watchdog = ">=2.1.5,<3"
+autopep8 = ">=1.5.7"
 
 [requires]
 python_version = "3.8"
