--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,14 @@ on:
       - master
 
 env:
-  PYTHON_VERSION: 3.8
+  PYTHON_VERSION: 3.9
   NODE_VERSION: 12.x
   NODE_ENV: production
   CI: true
 
   DOCKER_IMAGE_UI: jtalk/digito-ui
   DOCKER_IMAGE_API: jtalk/digito-api
+  DOCKER_IMAGE_SERVING: jtalk/digito-serving
 
   INFRA_APP: digito
   INFRA_REPOSITORY: Jtalk/jtalk.me-infrastructure
@@ -74,7 +75,7 @@ jobs:
           pip install --user pipenv
           pipenv sync --dev
           pipenv run tests
-      - name: Build and push Docker images
+      - name: Build and push API Docker image
         uses: docker/build-push-action@v1.0.1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -86,12 +87,31 @@ jobs:
           tag_with_sha: false
           push: ${{ github.ref == 'refs/heads/master' }}
 
+  build-release-serving:
+    name: Build and Release Tensorflow Serving API to Docker
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build and push Tensorflow Serving Docker image
+        uses: docker/build-push-action@v1.0.1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          path: digito-api
+          dockerfile: digito-api/tensorflow.Dockerfile
+          repository: ${{ env.DOCKER_IMAGE_SERVING }}
+          tags: ${{ github.sha }}
+          tag_with_ref: true
+          tag_with_sha: false
+          push: ${{ github.ref == 'refs/heads/master' }}
+
   build-release-helm:
     name: Build and publish the Helm chart
     runs-on: ubuntu-latest
     needs:
       - build-release-ui
       - build-release-api
+      - build-release-serving
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
