--- a/deploy/jtalk-digito/templates/api/deployment.yaml
+++ b/deploy/jtalk-digito/templates/api/deployment.yaml
@@ -34,6 +34,8 @@ spec:
           ports:
             - containerPort: {{ .Values.api.deployment.port }}
               protocol: TCP
+          {{- if .Values.api.deployment.resources }}
           resources:
             {{- toYaml .Values.api.deployment.resources | nindent 12 }}
+          {{- end }}
 
