Add TF serving path to configmap

--- a/deploy/jtalk-digito/templates/api/configmap.yaml
+++ b/deploy/jtalk-digito/templates/api/configmap.yaml
@@ -12,3 +12,4 @@ data:
   {{- end }}
   LOGGER_LEVEL: INFO
   UI_LOCATION: {{ join "," $origins.value | quote }}
+  TENSORFLOW_LOCATION: {{ printf "http://%s" .Values.serving.name | quote }}
