--- a/deploy/jtalk-digito/Chart.yaml
+++ b/deploy/jtalk-digito/Chart.yaml
@@ -5,7 +5,7 @@ description: A Helm chart for Digito Recogniser
 type: application
 
 version: 1.0.0
-appVersion: "initial"
+appVersion: "latest"
 
 home: https://digito.jtalk.me
 sources:
