--- a/deploy/jtalk-digito/values.yaml
+++ b/deploy/jtalk-digito/values.yaml
@@ -45,10 +45,10 @@ api:
     port: 80
     image:
       name: jtalk/digito-api
-    replicas: 2
+    replicas: 1
     rollingUpdate:
-      maxSurge: 50%
-      maxUnavailable: 50%
+      maxSurge: 1
+      maxUnavailable: 0
     affinity:
       weight: 100
       topologyKey: kubernetes.io/hostname
@@ -81,10 +81,10 @@ serving:
     port: 80
     image:
       name: jtalk/digito-serving
-    replicas: 2
+    replicas: 1
     rollingUpdate:
-      maxSurge: 50%
-      maxUnavailable: 50%
+      maxSurge: 1
+      maxUnavailable: 0
     affinity:
       weight: 100
       topologyKey: kubernetes.io/hostname
